--- a/css-j2bt6x/faculty.css
+++ b/css-j2bt6x/faculty.css
@@ -1,306 +1,2 @@
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: white;
-    opacity: 0.5; /* Firefox */
-  }
-  
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: rgba(255, 255, 255, 0.5)
-  }
-  
-  ::-ms-input-placeholder { /* Microsoft Edge */
-    color: rgba(255, 255, 255, 0.5)
-  }
-
-#faculty {
-    width: 800px;
-    min-width: 320px;
-    margin:auto;
-    margin-top: 7.4em;
-    margin-bottom: 10vh;
-    height: auto;
-    padding-left: 1em;
-    padding-right: 1em;
-    display: inline-flex;
-    flex-direction: column;
-}
-
-#faculty img {
-    cursor: pointer;
-}
-
-.frm {
-    width: 100%;
-    min-height: 130px;
-    display: inline-flex;
-    flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 3em;
-}
-
-.frm img {
-    object-fit: none;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.frm h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 22px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-}
-
-.entry {
-    width: auto;
-    min-height: 140px;
-    height: auto;
-    border: 1px solid white;
-    border-radius: 6px;
-    margin-top: 0.5em;
-    padding-bottom: 0.5em;
-    background: rgba(0, 0, 0, 0.05);
-}
-
-.entryHeader {
-    display: flex;
-    width: 98%;
-    height: auto;
-    margin: auto;
-    margin-top: 1em;
-    justify-content: space-between;
-}
-
-
-.bannerLine {
-    width: 98%;
-    height: 1px;
-    background-color: white;
-    margin-top: 1em;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 0.5em;
-    opacity: .3;
-}
-
-#divMessage {
-    width: 100%;
-    height: 54px;
-    display: flex;
-    margin: 0.5em;
-}
-
-#divMessage h1{
-    margin: auto;
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-}
-
-#btnShow {
-    opacity: .25;
-}
-
-
-#txtCourseNo {
-    display: flex;
-    width: 40px;
-    min-width: 40px;
-    height: 40px;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-}
-
-#txtCourseNo h1 {
-    margin: auto;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: white;
-}
-
-.textbox {
-    margin: auto;
-    width: 100%;
-    height: 40px;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    padding-left: .4em;
-    padding-right: .4em;
-    padding-top: auto;
-    padding-bottom: auto;
-    color: white;
-    outline: none;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-#txtCardNo {
-    display: flex;
-    width: 40px;
-    min-width: 40px;
-    height: 40px;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-}
-
-.dropFaculty {
-    margin: auto;
-    width: 100%;
-    height: 42px;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    padding-left: .4em;
-    padding-right: .4em;
-    padding-top: auto;
-    padding-bottom: auto;
-    color: white;
-    outline: none;
-    margin-left: .2em;
-    margin-right: .2em; 
-}
-
-.optionFaculty {
-    color: #303030;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    text-align: left;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    
-}
-
-.facultyEntry {
-    display: flex;
-    width: 98%;
-    height: 40px;
-    margin-top: 1em;
-    margin-bottom: .5em;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-}
-
-.facultyEntry h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: left;
-    
-}
-
-.courseNo {
-    margin-left: .2em;
-    margin-right: .2em;
-    width: 50px;
-    height: 42px;
-    outline: none;
-    display: flex;
-    background-color: transparent;
-}
-
-.facultyTitle {
-    width: 100%;
-    height: 40px;
-    margin-left: .2em;
-    margin-right: .2em;
-    margin-top: auto;
-    margin-bottom: auto;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-.facultyDesc {
-    width: 50%;
-    height: 40px;
-    margin-left: .2em;
-    margin-right: .2em;
-    margin-top: auto;
-    margin-bottom: auto;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-.facultyName {
-    width: 55%;
-    height: 40px;
-    margin-left: .2em;
-    margin-right: .2em;
-    margin-top: auto;
-    margin-bottom: auto;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-.facultyEmail {
-    width: 55%;
-    height: 40px;
-    margin-left: .2em;
-    margin-right: .2em;
-    margin-top: auto;
-    margin-bottom: auto;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-
-.btnDelCourse {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.btnDelAssignment {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/07/31 13:32:46 */
+#faculty{width:50pc;}[class~=frm]{width:100%;}[class~=frm]{min-height:1.354166667in;}#faculty,[class~=frm]{display:inline-flex;}[class~=frm]{flex-direction:column;}[class~=frm]{margin-left:auto;}[class~=frm]{margin-right:auto;}#faculty{min-width:320px;}[class~=frm]{margin-bottom:3em;}.entry{width:auto;}.entry{min-height:105pt;}.entry,#faculty,[class~=entryHeader]{height:auto;}.entry{border-left-width:.010416667in;}.entry{border-bottom-width:.010416667in;}.entry{border-right-width:.010416667in;}#divMessage h1,#faculty,[class~=entryHeader]{margin-left:auto;}#faculty{margin-bottom:10vh;}.entry{border-top-width:.010416667in;}#faculty img{cursor:pointer;}.entry{border-left-style:solid;}.entry{border-bottom-style:solid;}.entry{border-right-style:solid;}#divMessage h1,[class~=entryHeader],#faculty{margin-right:auto;}.entry{border-top-style:solid;}#faculty{margin-top:7.4em;}.entry{border-left-color:white;}.entry{border-bottom-color:white;}.entry{border-right-color:white;}::placeholder{color:white;}#faculty{padding-left:1em;}.frm img{object-fit:none;}.entry{border-top-color:white;}#faculty{padding-right:1em;}.entry{border-image:none;}.entry{border-radius:.375pc;}.entry{margin-top:.5em;}#divMessage h1,[class~=entryHeader]{margin-bottom:auto;}.entry{padding-bottom:.5em;}.entry{background:rgba(0,0,0,.05);}[class~=entryHeader],#divMessage{display:flex;}[class~=bannerLine],[class~=entryHeader]{width:98%;}::placeholder{opacity:.5;}.frm img{margin-left:.2em;}[class~=entryHeader],[class~=bannerLine]{margin-top:1em;}[class~=entryHeader]{justify-content:space-between;}#divMessage h1,.frm img,[class~=textbox],[class~=dropFaculty]{margin-top:auto;}#faculty{flex-direction:column;}[class~=bannerLine]{height:.010416667in;}[class~=bannerLine]{background-color:white;}[class~=textbox],#divMessage{width:100%;}[class~=bannerLine]{margin-left:auto;}[class~=textbox],[class~=dropFaculty],[class~=frm] h1,#divMessage h1{font-family:"Roboto";}[class~=bannerLine]{margin-right:auto;}[class~=bannerLine]{margin-bottom:.5em;}[class~=bannerLine]{opacity:.3;}[class~=textbox]{margin-left:.2em;}.frm img,[class~=textbox]{margin-bottom:auto;}#divMessage{height:.5625in;}.frm img,[class~=textbox]{margin-right:.2em;}[class~=textbox]{height:40px;}[class~=textbox]{border-left-width:.75pt;}[class~=textbox]{border-bottom-width:.75pt;}[class~=textbox]{border-right-width:.75pt;}[class~=textbox]{border-top-width:.75pt;}#divMessage{margin-left:.5em;}#divMessage{margin-bottom:.5em;}#divMessage h1{font-style:italic;}[class~=textbox]{border-left-style:solid;}[class~=textbox]{border-bottom-style:solid;}#divMessage h1{font-weight:700;}[class~=textbox]{border-right-style:solid;}[class~=textbox]{border-top-style:solid;}[class~=textbox]{border-left-color:#fff;}[class~=textbox]{border-bottom-color:#fff;}[class~=textbox]{border-right-color:#fff;}[class~=textbox]{border-top-color:#fff;}[class~=textbox]{border-image:none;}#divMessage{margin-right:.5em;}[class~=textbox]{border-radius:3pt;}[class~=textbox]{background-color:transparent;}[class~=frm] h1,[class~=textbox]{font-style:normal;}#divMessage{margin-top:.5em;}#btnShow{opacity:.25;}[class~=textbox],#divMessage h1{font-size:.145833333in;}[class~=textbox]{font-weight:400;}#divMessage h1{line-height:28px;}[class~=textbox],[class~=dropFaculty]{line-height:23px;}#txtCourseNo{display:flex;}.optionFaculty,#divMessage h1,[class~=dropFaculty],[class~=textbox]{letter-spacing:.1em;}[class~=textbox],[class~=dropFaculty]{padding-left:.4em;}[class~=textbox]{padding-right:.4em;}[class~=textbox]{padding-top:auto;}[class~=textbox]{padding-bottom:auto;}[class~=textbox]{color:white;}:-ms-input-placeholder{color:rgba(255,255,255,.5);}[class~=textbox]{outline:none;}#txtCourseNo{width:40px;}#txtCourseNo{min-width:2.5pc;}#txtCourseNo,[class~=dropFaculty]{margin-left:.2em;}#txtCourseNo,[class~=dropFaculty]{margin-bottom:auto;}#txtCourseNo,[class~=dropFaculty]{margin-right:.2em;}#txtCourseNo{height:.416666667in;}[class~=dropFaculty]{width:100%;}[class~=dropFaculty]{height:.4375in;}[class~=dropFaculty],#txtCourseNo{border-left-width:.0625pc;}[class~=dropFaculty],#txtCourseNo{border-bottom-width:.0625pc;}#txtCourseNo,[class~=dropFaculty]{border-right-width:.0625pc;}[class~=dropFaculty],#txtCourseNo{border-top-width:.0625pc;}#txtCourseNo,[class~=dropFaculty]{border-left-style:solid;}#txtCourseNo,[class~=dropFaculty]{border-bottom-style:solid;}[class~=dropFaculty],#txtCourseNo{border-right-style:solid;}#txtCourseNo,[class~=dropFaculty]{border-top-style:solid;}#txtCourseNo,[class~=dropFaculty]{border-left-color:#fff;}[class~=dropFaculty],#txtCourseNo{border-bottom-color:#fff;}#divMessage h1{color:#fff;}#txtCourseNo,[class~=dropFaculty]{border-right-color:#fff;}[class~=dropFaculty],#txtCourseNo{border-top-color:#fff;}[class~=dropFaculty],#txtCourseNo{border-image:none;}[class~=dropFaculty]{border-radius:4px;}[class~=dropFaculty]{background-color:transparent;}#txtCourseNo{margin-top:auto;}[class~=dropFaculty],.optionFaculty{font-style:normal;}[class~=dropFaculty],.optionFaculty{font-weight:700;}[class~=dropFaculty]{font-size:14px;}#txtCourseNo h1{margin-left:auto;}[class~=frm] h1{font-weight:900;}[class~=dropFaculty]{padding-right:.4em;}[class~=dropFaculty]{padding-top:auto;}[class~=dropFaculty]{padding-bottom:auto;}[class~=dropFaculty]{color:white;}[class~=courseNo],[class~=dropFaculty]{outline:none;}.optionFaculty{color:#303030;}[class~=frm] h1{font-size:16.5pt;}[class~=frm] h1,.optionFaculty{line-height:.291666667in;}#txtCourseNo h1,.facultyEntry h1,.optionFaculty{font-family:"Roboto";}.optionFaculty{font-size:.166666667in;}.optionFaculty{text-align:left;}.optionFaculty{padding-top:1em;}::-ms-input-placeholder{color:rgba(255,255,255,.5);}.optionFaculty{padding-bottom:1em;}[class~=facultyDesc],[class~=courseNo],[class~=facultyEntry],[class~=facultyName],[class~=facultyTitle],[class~=facultyEmail],#txtCardNo{display:flex;}[class~=facultyEntry]{width:98%;}[class~=facultyEntry]{height:2.5pc;}#txtCourseNo h1{margin-bottom:auto;}[class~=facultyEntry]{margin-top:1em;}[class~=facultyEntry]{margin-bottom:.5em;}[class~=facultyEntry]{margin-left:auto;}[class~=facultyEntry]{margin-right:auto;}[class~=facultyEntry]{justify-content:space-between;}[class~=facultyDesc],[class~=facultyName],[class~=courseNo],[class~=facultyTitle]{margin-left:.2em;}[class~=frm] h1{letter-spacing:.1em;}[class~=courseNo],[class~=facultyName],[class~=facultyTitle],[class~=facultyDesc]{margin-right:.2em;}#txtCourseNo h1{margin-right:auto;}#txtCourseNo{border-radius:3pt;}[class~=courseNo]{width:3.125pc;}[class~=courseNo]{height:.4375in;}#txtCourseNo h1{margin-top:auto;}#txtCourseNo,[class~=courseNo]{background-color:transparent;}[class~=facultyTitle]{width:100%;}#txtCardNo,[class~=facultyEmail],[class~=facultyName],[class~=facultyTitle],[class~=facultyDesc]{height:30pt;}[class~=frm] h1{color:#fff;}[class~=facultyTitle],[class~=facultyEmail],[class~=facultyDesc],[class~=facultyName]{margin-top:auto;}[class~=facultyEmail],[class~=facultyDesc],[class~=facultyTitle],[class~=facultyName]{margin-bottom:auto;}#txtCardNo{width:40px;}[class~=facultyTitle],[class~=facultyEmail],[class~=facultyName],[class~=facultyDesc]{overflow:hidden;}[class~=facultyDesc],[class~=facultyTitle],[class~=facultyName],[class~=facultyEmail]{word-break:keep-all;}[class~=facultyDesc]{width:50%;}[class~=facultyEmail],[class~=facultyName]{width:55%;}.facultyEntry h1,#txtCourseNo h1{font-style:normal;}#txtCardNo{min-width:30pt;}#txtCourseNo h1{font-weight:400;}#txtCourseNo h1,.facultyEntry h1{font-size:10.5pt;}.facultyEntry h1{font-weight:700;}#txtCardNo,[class~=facultyEmail],[class~=btnDelAssignment],[class~=btnDelCourse]{margin-left:.2em;}[class~=facultyEmail],[class~=btnDelCourse],[class~=btnDelAssignment],#txtCardNo{margin-right:.2em;}#txtCourseNo h1,.facultyEntry h1{line-height:.239583333in;}.facultyEntry h1,#txtCourseNo h1{letter-spacing:.1em;}[class~=btnDelCourse],#txtCardNo,[class~=btnDelAssignment]{margin-bottom:auto;}#txtCourseNo h1{color:white;}#txtCardNo,[class~=btnDelAssignment],[class~=btnDelCourse]{margin-top:auto;}#txtCardNo{border-left-width:.010416667in;}#txtCardNo{border-bottom-width:.010416667in;}#txtCardNo{border-right-width:.010416667in;}#txtCardNo{border-top-width:.010416667in;}#txtCardNo{border-left-style:solid;}#txtCardNo{border-bottom-style:solid;}#txtCardNo{border-right-style:solid;}#txtCardNo{border-top-style:solid;}#txtCardNo{border-left-color:#fff;}#txtCardNo{border-bottom-color:#fff;}#txtCardNo{border-right-color:#fff;}#txtCardNo{border-top-color:#fff;}.facultyEntry h1{color:#fff;}#txtCardNo{border-image:none;}.facultyEntry h1{margin-top:auto;}#txtCardNo{border-radius:3pt;}#txtCardNo{background-color:transparent;}.facultyEntry h1{margin-bottom:auto;}.facultyEntry h1{text-align:left;}
