--- a/css-j2bt6x/style.css
+++ b/css-j2bt6x/style.css
@@ -1,173 +1,2 @@
-*{
-    margin:0;
-    padding:0;
-
-}
-
-a:link {
-    color: white;
-  }
-  
-  /* visited link */
-  a:visited {
-    color: white;
-  }
-  
-  /* mouse over link */
-  a:hover {
-    color: white;
-  }
-  
-  /* selected link */
-  a:active {
-    color: white;
-  }
-
-body {
-	overflow-x: hidden;
-  overflow-y: auto;
-  background-image: linear-gradient(180deg, rgba(61, 39, 148 ,1), rgba(109,196,245, 1)); 
-}
-
-
-/* width */
-body::-webkit-scrollbar {
-	width: 1px;
-  }
-  
-  /* Track */
-body::-webkit-scrollbar-track {
-	background: #303030;
-  }
-  
-  /* Handle */
-body::-webkit-scrollbar-thumb {
-	background: #313131;
-	border-radius: 100px;
-  }
-  
-body::-webkit-scrollbar-thumb:hover {
-	background: #505050;
-	border-radius: 100px;
-  }
-
-#header {
-    width: 100%;
-    height: 80px;
-    display: flex;
-    z-index: 9;
-    position: fixed;
-}
-
-#div1 {
-    height: 80px;
-    width: 80px;
-    min-width: 80px;
-    max-width: 80px;
-    display: flex;
-    background-color: #303030;
-}
-
-#div1 img {
-    max-width: 64px;
-    max-height: 61px;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-#div2 {
-    min-width: 23px;
-    max-width: 23px;
-}
-
-#div3 {
-    width: 100%;
-    min-height: 40px;
-    height: 4.4vh;
-    display: flex;
-    background-color: #303030;
-}
-
-#div3 img {
-    margin-left: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: 8px;
-    cursor: pointer;
-    
-}
-
-#divBanner {
-    height: 30px;
-    width: 100%;
-    z-index: 6;
-    margin-top: 2.5em;
-    position: fixed;
-    display: flex;
-    overflow: hidden;
-    background-color: #3A2D8C;
-    visibility: hidden;
-}
-
-#bannerContainer {
-    width: auto;
-    height: auto;
-    display: flex;
-}
-
-#pBanner {
-    font-family: 'Roboto';
-    font-size: 14px;
-    font-weight: 400; 
-    margin-top: auto;
-    margin-bottom: auto;
-    color: white;
-    
-}
-
-#bodyBlue {
-    z-index: 0;
-    width: 100%;
-    min-height: 97vh;
-    display: flex;
-    visibility: hidden;
-    flex-wrap: wrap;
-    background-image: linear-gradient(180deg, rgba(61, 39, 148 ,1), rgba(109,196,245, 1)); 
-}
-
-
-#footer {
-    z-index: 9;
-    height: 3vh;
-    width: 100%;
-    display: flex;
-    top: 97vh;
-    position: fixed;
-    background-color: #303030;
-}
-
-#footer p {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    font-family: 'Poppins';
-    font-size: 10px;
-    font-weight: 500;
-    color: #888888;
-    letter-spacing: 2px;
-}
-
-#black {
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-  opacity: .2;
-  position: fixed;
-  z-index: 7;
-  transition: opacity .5s;
-  visibility: hidden;
-}
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/07/31 13:39:41 */
+#header{width:100%;}#header,#div1{height:.833333333in;}#header,#bannerContainer,#bodyBlue,#divBanner,#div1,#footer,#div3{display:flex;}body{overflow-x:hidden;}#div1 img{max-width:48pt;}#header{z-index:9;}#divBanner,#header{position:fixed;}#div1{width:.833333333in;}#div1{min-width:5pc;}#div1{max-width:60pt;}#div1,#div3{background-color:#303030;}#div2{min-width:1.4375pc;}#div1 img{max-height:45.75pt;}#div2{max-width:1.4375pc;}#divBanner,#div3{width:100%;}body{overflow-y:auto;}*{margin-left:0;}#div3{min-height:40px;}#div3{height:4.4vh;}#div3 img,#div1 img{margin-left:auto;}#divBanner{height:30px;}#divBanner{z-index:6;}#divBanner{margin-top:2.5em;}#div1 img{margin-right:auto;}#divBanner{overflow:hidden;}#divBanner{background-color:#3a2d8c;}#div1 img,#div3 img{cursor:pointer;}#bodyBlue,#black,#divBanner{visibility:hidden;}#bannerContainer{width:auto;}#bannerContainer{height:auto;}#pBanner,#div1 img,#footer p,#div3 img{margin-top:auto;}#div1 img,#footer p,#pBanner,#div3 img{margin-bottom:auto;}#pBanner{font-family:"Roboto";}#pBanner{font-size:.875pc;}#pBanner,a:hover,a:visited,a:link{color:white;}#pBanner{font-weight:400;}#bodyBlue{z-index:0;}#div3 img{margin-right:.5pc;}body,#bodyBlue{background-image:linear-gradient(180deg,rgba(61,39,148,1),rgba(109,196,245,1));}#bodyBlue,#footer{width:100%;}#bodyBlue{min-height:97vh;}body::-webkit-scrollbar{width:.010416667in;}#bodyBlue{flex-wrap:wrap;}#footer{z-index:9;}#footer{height:3vh;}#footer{top:97vh;}#black,#footer{position:fixed;}*{margin-bottom:0;}#footer{background-color:#303030;}body::-webkit-scrollbar-track{background:#303030;}#black{width:100vw;}#black{height:100vh;}#black{background-color:black;}body::-webkit-scrollbar-thumb{background:#313131;}#black{opacity:.2;}#black{z-index:7;}#footer p{margin-left:auto;}#black{transition:opacity .5s;}body::-webkit-scrollbar-thumb{border-radius:6.25pc;}*{margin-right:0;}#footer p{margin-right:auto;}*{margin-top:0;}*{padding-left:0;}*{padding-bottom:0;}#footer p{font-family:"Poppins";}#footer p{font-size:7.5pt;}#footer p{font-weight:500;}#footer p{color:#888;}a:active{color:white;}*{padding-right:0;}#footer p{letter-spacing:.020833333in;}*{padding-top:0;}body::-webkit-scrollbar-thumb:hover{background:#505050;}body::-webkit-scrollbar-thumb:hover{border-radius:75pt;}
