--- a/css-j2bt6x/menu.css
+++ b/css-j2bt6x/menu.css
@@ -1,2 +1,60 @@
-/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/07/31 13:38:57 */
-#black iframe{margin-left:auto;}#black iframe{margin-bottom:auto;}#black iframe{margin-right:auto;}#black iframe{margin-top:auto;}#black iframe{width:480pt;}[class~=boxMenu] h1,[class~=boxMenu]:hover h1{color:#fff;}#black iframe{height:360px;}#black iframe{border-left-width:medium;}#black iframe{border-bottom-width:medium;}#black iframe{border-right-width:medium;}[class~=boxMenu] h1{margin-top:auto;}#menu{height:100vh;}#black iframe{border-top-width:medium;}#black iframe{border-left-style:none;}#black iframe{border-bottom-style:none;}[class~=boxMenu],[class~=menuLine]{width:100%;}[class~=menuLine]{height:.75pt;}[class~=boxMenu] h1{margin-bottom:auto;}#menu{width:1.666666667in;}#black iframe{border-right-style:none;}#black iframe{border-top-style:none;}#black iframe{border-left-color:currentColor;}[class~=menuLine]{background-color:#303030;}[class~=boxMenu] h1{margin-left:25%;}#black,[class~=boxMenu]{display:flex;}#menu{z-index:8;}#black iframe{border-bottom-color:currentColor;}[class~=boxMenu]{height:.833333333in;}#black iframe{border-right-color:currentColor;}[class~=boxMenu]{text-align:left;}#menu{position:fixed;}#black iframe{border-top-color:currentColor;}#menu{transform:translateX(100vw);}#black iframe{border-image:none;}[class~=boxMenu] h1{font-family:"Roboto";}#menu{background-color:#252525;}#boxAll{margin-top:4.5vh;}[class~=boxMenu] h1{font-style:normal;}[class~=boxMenu]{cursor:pointer;}[class~=boxMenu] h1{font-weight:700;}[class~=boxMenu] h1{font-size:10.5pt;}[class~=boxMenu] h1{line-height:21px;}#black{transition:opacity .5s;}[class~=boxMenu] h1{letter-spacing:.1em;}[class~=boxMenu] h1{opacity:.35;}[class~=boxMenu]:hover h1{opacity:1;}
+#menu {
+    height: 100vh;
+    width: 160px;
+    z-index: 9;
+    position: fixed;
+    transform: translateX(100vw);
+    background-color: #252525;
+}
+
+.menuLine {
+    width: 100%;
+    height: 1px;
+    background-color: #303030;
+}
+
+#boxAll {
+    margin-top: 4.5vh;
+}
+
+.boxMenu {
+    display: flex;
+    width: 100%;
+    height: 80px;
+    text-align: left;
+    cursor: pointer;
+
+}
+
+.boxMenu h1 {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 25%;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.1em;
+    color: #FFFFFF;
+    opacity: 0.35;
+}
+
+
+.boxMenu:hover h1 {
+    color: #FFFFFF;
+    opacity: 1;
+}
+
+#black {
+    display: flex;
+    transition: opacity .5s;
+}
+
+#black iframe {
+    margin: auto;
+    width: 640px;
+    height: 360px;
+    border: none;
+    
+}
