--- a/css-j2bt6x/style.css
+++ b/css-j2bt6x/style.css
@@ -52,6 +52,7 @@ body::-webkit-scrollbar-thumb:hover {
   }
 
 #header {
+    z-index: 10;
     width: 100%;
     height: 80px;
     display: flex;
@@ -59,7 +60,6 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 #div1 {
-    z-index: 10;
     height: 80px;
     width: 80px;
     min-width: 80px;
@@ -79,18 +79,17 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 #div2 {
-    z-index: 10;
     min-width: 23px;
     max-width: 23px;
 }
 
 #div3 {
     width: 100%;
-    min-height: 40px;
-    height: 4.4vh;
+    height: 40px;
     display: flex;
-    background-color: #303030;
     position: fixed;
+    z-index: 10;
+    background-color: #303030;
 }
 
 #div3 img {
@@ -99,16 +98,18 @@ body::-webkit-scrollbar-thumb:hover {
     margin-bottom: auto;
     margin-right: 8px;
     cursor: pointer;
-    
 }
 
 #divBanner {
+    z-index: 7;
+    margin-top: 40px;
     height: 30px;
     width: 100%;
     display: flex;
     overflow: hidden;
     background-color: #3A2D8C;
     visibility: hidden;
+    position: fixed;
 }
 
 #bannerContainer {
